--- a/index.html
+++ b/index.html
@@ -6,7 +6,146 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>HTML</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+</head>
+<div class="d-flex justify-content-center">
+    <img src="gambar.png" style="width: 15em">
+  </div>
   
+   <body class="d-flex flex-column h-100">
+ 
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #ede7f6; /* Latar belakang purple muda */
+  }
+
+  header {
+    background-color: #7e57c2; /* Purple gelap */
+    padding: 20px;
+    text-align: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  h1 {
+    text-align: center;
+    color: #5e35b1; /* Purple gelap */
+  }
+
+  table {
+    width: 80%;
+    margin: 20px auto;
+    border-collapse: collapse;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+  }
+
+  th, td {
+    border: 1px solid #7e57c2; /* Purple gelap */
+    padding: 12px;
+    text-align: center;
+  }
+
+  th {
+    background-color: #b39ddb; /* Purple muda */
+    color: white;
+    font-weight: bold;
+  }
+
+  tr:nth-child(even) {
+    background-color: #ede7f6; /* Purple sangat muda */
+  }
+
+  tr:hover {
+    background-color: #d1c4e9; /* Purple muda lebih gelap */
+    transition: 0.3s;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+</style>
+
+table class="table" id="daftar">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">namabarang</th>
+        <th scope="col">jumlahbarang</th>
+        <th scope="col">sisabarang</th>
+        <th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+
+  <img src="loader.gif" style="width: 5em; display: block" id="loader">
+
+  <a href="form-data-stokopname.html">Tambah stok opname</a>
+
+  <script type="module">
+    import { ambilDaftarStokOpname, hapusstokopname, ubahstokopname } from './main.js';
+
+    $(document).ready(async function() {
+      let elemenDaftar = $("#daftar> tbody");
+      let daftarStokOpname = await ambilDaftarStokOpname();
+      let nomor = 1;
+
+      daftarStokOpname.forEach((data) => {
+        elemenDaftar.append(
+          '<tr>' +
+          '<th>' + nomor + '</th>' +
+          '<td>' + data.namabarang + '</td>' +
+          '<td>' + data.jumlahbarang + '</td>' +
+          '<td>' + data.sisabarang + '</td>' + '<td class="stack-up">' +
+          ' <a href="#" class="me-2 link-ubah"  data="' +
+          data.id +
+          '">ubah</a> ' +
+          ' <button class="btn btn-danger tombol-hapus" data="' +
+          data.id +
+          '">hapus</button>' + '</td>' +
+          '</tr>'
+        );
+        nomor = nomor + 1;
+      });
+
+      $('#loader').hide();
+
+      $('.tombol-hapus').click(async function() {
+        $(this).attr('disabled', 'disabled');
+        $('#' + $(this).attr('data')).show();
+        await hapusstokopname($(this).attr('data'));
+        location.reload();
+      });
+      $('.link-ubah').click(async function() {
+        window.location.replace('ubah-stok-opname.html?docId=' + $(this).attr('data'));
+      })
+
+    });
+  </script>
+  <footer class="py-3 bg-dark-subtle mt-auto">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+
+      </ul>
+      <p class="text-center text-body-secondary">&copy; SMK PLUS INSAN CEMERLANG 2025
+        # STOK OPNAME 
+        # DD MART</p>
+    </footer>
+</body>
+
+</html>
+
   <!-- HTML -->
   
 
