--- a/index.html
+++ b/index.html
@@ -1,180 +1,95 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
-
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Daftar Stok Opname</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-</head>
-<div class="d-flex justify-content-center">
-    <img src="gambar.png" style="width: 15em">
-  </div>
-
-
-<body class="d-flex flex-column h-100">
+  <title>To-Do List</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #ffe6f2; /* Warna pink muda */
-    }
-
-    header {
-      background-color: #ff66b2; /* Warna pink tua */
+      background:#f#424B5A;
       padding: 20px;
-      text-align: center;
-      color: white;
-      font-size: 24px;
-      font-weight: bold;
+      max-width: 500px;
+      margin: auto;
     }
 
     h1 {
       text-align: center;
-      color: #d63384;
     }
 
-    table {
-      width: 80%;
-      margin: 20px auto;
-      border-collapse: collapse;
-      background-color: white;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      overflow: hidden;
+    .todo-container {
+      background: deeppink;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
 
-    th, td {
-      border: 1px solid #ff66b2;
-      padding: 12px;
-      text-align: center;
+    input[type="text"] {
+      width: 75%;
+      padding: 10px;
+      margin-right: 5px;
     }
 
-    th {
-      background-color: #ff99cc;
-      color: white;
-      font-weight: bold;
+    button {
+      padding: 10px 15px;
+      cursor: pointer;
     }
 
-    tr:nth-child(even) {
-      background-color: #ffe6f2;
+    ul {
+      list-style-type: none;
+      padding: 0;
     }
 
-    tr:hover {
-      background-color: #ffb3d9;
-      transition: 0.3s;
+    li {
+      padding: 10px;
+      background: #eee;
+      margin-top: 5px;
+      border-radius: 5px;
+      display: flex;
+      justify-content: space-between;
     }
 
-    img {
-      max-width: 100%;
-      height: auto;
+    li.done {
+      text-decoration: line-through;
+      color: gray;
     }
   </style>
+</head>
+<body>
 
-  <h1>Daftar Data Stok opname</h1>
+  <h1>To-Do List</h1>
+  <div class="todo-container">
+    <input type="text" id="taskInput" placeholder="Tambah tugas baru...">
+    <button onclick="addTask()">Tambah</button>
+    <ul id="taskList"></ul>
+  </div>
 
+  <script>
+    function addTask() {
+      const taskInput = document.getElementById('taskInput');
+      const taskText = taskInput.value.trim();
+      if (taskText === '') return;
 
-  <table class="table" id="daftar">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">namabarang</th>
-        <th scope="col">jumlahbarang</th>
-        <th scope="col">sisabarang</th>
-        <th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
+      const li = document.createElement('li');
+      li.textContent = taskText;
 
-  <img src="loader.gif" style="width: 5em; display: block" id="loader">
-
-  <a href="form-data-stokopname.html">Tambah stok opname</a>    <a href="index.html">Lihat Daftar Stok opname</a>
-
-    <script type="module">
-      import { tambahtoDoLis } from './main.js';
-
-      let tombolTambah = document.getElementById('tombol-tambah');
-      let elemenNamaBarang = document.getElementById('input-namaBarang');
-      let elemenJumlahBarang = document.getElementById('input-jumlahBarang');
-      let elemenSisaBarang = document.getElementById('input-sisaBarang');
-
-      tombolTambah.addEventListener('click', async function(e) {
-        e.preventDefault();
-        await tambahStokOpname(elemenNamaBarang.value, elemenJumlahBarang.value, elemenSisaBarang.value);
-         window.location.href = 'index.html';
-      });
-  <img src="loader.gif" style="width: 5em; display: block" id="loader">
-
-  <a href="form-data-stokopname.html">Tambah stok opname</a>
-
-  <script type="module">
-    import { ambilDaftarStokOpname, hapusstokopname, ubahstokopname } from './main.js';
-
-    $(document).ready(async function() {
-      let elemenDaftar = $("#daftar> tbody");
-      let daftarStokOpname = await ambilDaftarStokOpname();
-      let nomor = 1;
-
-function deleteTask(index) {
-  
-
-  <script type="module">
-    import { ambilDaftarStokOpname, hapusstokopname, ubahstokopname } from './main.js';
-
-    $(document).ready(async function() {
-      let elemenDaftar = $("#daftar> tbody");
-      let daftarStokOpname = await ambilDaftarStokOpname();
-      let nomor = 1;
-
-      daftarStokOpname.forEach((data) => {
-        elemenDaftar.append(
-          '<tr>' +
-          '<th>' + nomor + '</th>' +
-          '<td>' + data.namabarang + '</td>' +
-          '<td>' + data.jumlahbarang + '</td>' +
-          '<td>' + data.sisabarang + '</td>' + '<td class="stack-up">' +
-          ' <a href="#" class="me-2 link-ubah"  data="' +
-          data.id +
-          '">ubah</a> ' +
-          ' <button class="btn btn-danger tombol-hapus" data="' +
-          data.id +
-          '">hapus</button>' + '</td>' +
-          '</tr>'
-        );
-        nomor = nomor + 1;
+      // Toggle selesai
+      li.addEventListener('click', () => {
+        li.classList.toggle('done');
       });
 
-      $('#loader').hide();
+      // Tombol hapus
+      const deleteBtn = document.createElement('button');
+      deleteBtn.textContent = 'Hapus';
+      deleteBtn.onclick = (e) => {
+        e.stopPropagation();
+        li.remove();
+      };
 
-      $('.tombol-hapus').click(async function() {
-        $(this).attr('disabled', 'disabled');
-        $('#' + $(this).attr('data')).show();
-        await hapusstokopname($(this).attr('data'));
-        location.reload();
-      });
-      $('.link-ubah').click(async function() {
-        window.location.replace('ubah-stok-opname.html?docId=' + $(this).attr('data'));
-      })
-
-    });
+      li.appendChild(deleteBtn);
+      document.getElementById('taskList').appendChild(li);
+      taskInput.value = '';
+    }
   </script>
-  <footer class="py-3 bg-dark-subtle mt-auto">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
 
-      </ul>
-      <p class="text-center text-body-secondary">&copy; SMK PLUS INSAN CEMERLANG 2025
-        # STOK OPNAME 
-        # DD MART</p>
-    </footer>
 </body>
-
 </html>
-
