--- a/index.html
+++ b/index.html
@@ -2,92 +2,161 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>To-Do List</title>
+  <title>SiTugas - To Do List</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background:#f#424B5A;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #ffe6f0;
       padding: 20px;
-      max-width: 500px;
-      margin: auto;
+      color: #4d004d;
     }
 
     h1 {
       text-align: center;
+      color: #cc0066;
     }
 
-    .todo-container {
-      background: deeppink;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    .input-container {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
     }
 
-    input[type="text"] {
-      width: 75%;
-      padding: 10px;
-      margin-right: 5px;
+    input, button {
+      padding: 8px 12px;
+      border: 1px solid #cc0066;
+      border-radius: 5px;
+      font-size: 14px;
     }
 
     button {
-      padding: 10px 15px;
+      background-color: #ff66b3;
+      color: white;
       cursor: pointer;
+      transition: 0.3s;
     }
 
-    ul {
-      list-style-type: none;
-      padding: 0;
+    button:hover {
+      background-color: #e60073;
     }
 
-    li {
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+      background-color: #ffb3d9;
+    }
+
+    th, td {
+      border: 1px solid #cc0066;
       padding: 10px;
-      background: #eee;
-      margin-top: 5px;
-      border-radius: 5px;
-      display: flex;
-      justify-content: space-between;
+      text-align: center;
     }
 
-    li.done {
+    th {
+      background-color: #cc0066;
+      color: white;
+    }
+
+    .done {
       text-decoration: line-through;
-      color: gray;
+      color: #666;
+      background-color: #ffe6f0;
+    }
+
+    @media (max-width: 600px) {
+      table, thead, tbody, th, td, tr {
+        font-size: 12px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h1>To-Do List</h1>
-  <div class="todo-container">
-    <input type="text" id="taskInput" placeholder="Tambah tugas baru...">
+  <h1>SiTugas - To Do List</h1>
+
+  <div class="input-container">
+    <input type="text" id="taskName" placeholder="Nama Tugas">
+    <input type="text" id="priority" placeholder="Prioritas (Tinggi/Sedang/Rendah)">
+    <input type="date" id="deadline">
     <button onclick="addTask()">Tambah</button>
-    <ul id="taskList"></ul>
   </div>
 
+  <table>
+    <thead>
+      <tr>
+        <th>No</th>
+        <th>Nama Tugas</th>
+        <th>Prioritas</th>
+        <th>Tanggal</th>
+        <th>Status</th>
+        <th>Aksi</th>
+      </tr>
+    </thead>
+    <tbody id="taskList"></tbody>
+  </table>
+
   <script>
-    function addTask() {
-      const taskInput = document.getElementById('taskInput');
-      const taskText = taskInput.value.trim();
-      if (taskText === '') return;
+    let tasks = [];
 
-      const li = document.createElement('li');
-      li.textContent = taskText;
-
-      // Toggle selesai
-      li.addEventListener('click', () => {
-        li.classList.toggle('done');
+    function renderTasks() {
+      const list = document.getElementById('taskList');
+      list.innerHTML = '';
+      tasks.forEach((task, index) => {
+        list.innerHTML += `
+          <tr class="${task.status ? 'done' : ''}">
+            <td>${index + 1}</td>
+            <td>${task.name}</td>
+            <td>${task.priority}</td>
+            <td>${task.date}</td>
+            <td>${task.status ? 'Selesai' : 'Belum'}</td>
+            <td>
+              <button onclick="markDone(${index})">Selesai</button>
+              <button onclick="editTask(${index})">Edit</button>
+              <button onclick="deleteTask(${index})">Hapus</button>
+            </td>
+          </tr>
+        `;
       });
+    }
 
-      // Tombol hapus
-      const deleteBtn = document.createElement('button');
-      deleteBtn.textContent = 'Hapus';
-      deleteBtn.onclick = (e) => {
-        e.stopPropagation();
-        li.remove();
-      };
+    function addTask() {
+      const name = document.getElementById('taskName').value.trim();
+      const priority = document.getElementById('priority').value.trim();
+      const date = document.getElementById('deadline').value;
+      if (!name) {
+        alert("Nama tugas tidak boleh kosong!");
+        return;
+      }
+      tasks.push({ name, priority, date, status: false });
+      renderTasks();
+      document.getElementById('taskName').value = '';
+      document.getElementById('priority').value = '';
+      document.getElementById('deadline').value = '';
+    }
 
-      li.appendChild(deleteBtn);
-      document.getElementById('taskList').appendChild(li);
-      taskInput.value = '';
+    function markDone(index) {
+      tasks[index].status = true;
+      renderTasks();
+    }
+
+    function deleteTask(index) {
+      tasks.splice(index, 1);
+      renderTasks();
+    }
+
+    function editTask(index) {
+      const newName = prompt("Nama tugas baru:", tasks[index].name);
+      const newPriority = prompt("Prioritas baru:", tasks[index].priority);
+      const newDate = prompt("Tanggal baru (YYYY-MM-DD):", tasks[index].date);
+      if (newName && newPriority && newDate) {
+        tasks[index].name = newName;
+        tasks[index].priority = newPriority;
+        tasks[index].date = newDate;
+        renderTasks();
+      }
     }
   </script>
 
