--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
     <thead>
       <tr>
         <th>No</th>
-        <th>Prioritas</th>
-        <th>Tanggal</th>
-        <th>Status</th>
-        <th>Aksi</th>
+        <th>nama tugas</th>
+        <th>prioritas</th>
+        <th>tanggal</th>
+        <th>status</th>
+        <th>aksi</th>
       </tr>
     </thead>
     <tbody id="taskList"></tbody>
